--- a/package.json
+++ b/package.json
@@ -11,13 +11,27 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.12",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "i18next": "^19.9.2",
     "i18next-http-backend": "^1.1.1",
     "react": "17.0.1",
     "react-i18next": "^11.8.10",
     "react-native": "0.64.0",
+    "react-native-geolocation-service": "^5.2.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
-    "react-native-localize": "^2.0.2"
+    "react-native-localize": "^2.0.2",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
